# fastapi_kafka_example

./: .python-version  README.md  check.py  consumer.py  main.py  producer.py  pyproject.toml
docker/: docker-compose.yml
src/: producer.py
