[tool.poetry]
name = "fastapi-kafka-example"
version = "0.1.0"
description = ""
authors = ["VasiliySilver <svaaugust@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
ruff = "^0.8.3"
pytest = "^8.3.4"
black = "^24.10.0"
isort = "^5.13.2"
six = "^1.17.0"
confluent-kafka = "^2.6.2"
fastapi = "^0.115.6"
uvicorn = "^0.34.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
